fix the white space in the bg image on the about page

--- a/css/index.css
+++ b/css/index.css
@@ -235,6 +235,7 @@ p {
   text-align: center;
 }
 .container-about {
+  display: flex;
   height: 90vh;
 }
 .container-about .hero {
