--- a/less/about.less
+++ b/less/about.less
@@ -1,4 +1,5 @@
 .container-about {
+    display: flex;
     height: 90vh;
     .hero {
         width: 100%;
